[package]
authors = ["Peltoche <dev@halium.fr>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "An ls command with a lot of pretty colors and some other stuff."
keywords = ["ls"]
license = "Apache-2.0"
name = "lsd"
readme = "./README.md"
repository = "https://github.com/Peltoche/lsd"
version = "0.23.1"
edition = "2021"

[[bin]]
name = "lsd"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
version_check = "0.9.*"

[dependencies]
crossterm = { version = "0.24.0", features = ["serde"]}
dirs = "3.0.*"
libc = "0.2.*"
human-sort = "0.2.2"
term_grid = "0.1.*"
terminal_size = "0.1.*"
thiserror = "1.0"
sys-locale = "0.2.4"
once_cell = "1.17.1"
chrono = { version = "0.4.*", features = ["unstable-locales"] }
chrono-humanize = "0.1.*"
unicode-width = "0.1.*"
lscolors = "0.9.0"
wild = "2.0.*"
globset = "0.4.*"
xdg = "2.1.*"
yaml-rust = "0.4.*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.1.*"
regex = "1.7.3"

[target.'cfg(unix)'.dependencies]
users = "0.11.*"
xattr = "0.2.*"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Memory"] }

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.1"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1.0.1"
tempfile = "3"
serial_test = "0.5"

[features]
sudo = []

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
